--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+dj-database-url==0.5.0
 Django==2.2.3
-gunicorn==19.9.0
 django-filter==2.1.0
 djangorestframework==3.9.4
+gunicorn==19.9.0
 Markdown==3.1.1
+psycopg2==2.7.4
+python-decouple==3.1
 pytz==2019.1
 sqlparse==0.3.0
+whitenoise==4.1.2
